# vat

./: .cproject  .project  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  bootstrap  clean  config.h.in  configure  configure.ac  configure.scan  default.vatrc  index.html  params.json  vat.pc.in  vatConfirguration.txt  vatConfirgurationTemplate.txt
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
deprecated/: s3ref.c  vat.php  vatConfirguration.txt  vat_cgi.c  vat_list_raw_cgi.c  vat_process_cgi.c  vat_process_old.php
deprecated/src/: vat_fileUpload_cgi.c  vat_list_data_cgi.c  vat_upload_cgi.c
deprecated/web/: test_model.php  test_server.php  testapi.php  vat-process-frag.html
lib/: Makefile.am  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
master/: Makefile.am  Makefile.in  dataset_api.php  datasets.php  documentation.php  download.php  formats.php  genotype.php  index.php  info.php  installation.php  master_node.sql  process.php  process_data.php  programs.php  raw.php  servers.json  sets.php  summary.php  upload.php  workflow.php
master/balancer/: balancer.php
master/libmaster/: balancer.php  db.php  init_master.php  model.php  model_dataset.php  server.php
scripts/: Confq.pm  get_annotation_sets.sh  install_rc.sh  install_web.pl
src/: Makefile.am  Makefile.in  cfio.c  cfio.h  gencode2interval.c  genericMapper.c  growbuffer.c  growbuffer.h  indelMapper.c  interval2sequences.c  md5.c  md5.h  s3.c  s3.h  shutil.c  shutil.h  snpMapper.c  svMapper.c  tests3.c  util.c  util.h  vat.pc.in  vat_cgi.c  vat_fileUpload_cgi.c  vat_process_cgi.c  vat_upload_cgi.c  vatson.c  vcf.c  vcf.h  vcf2images.c  vcfModifyHeader.c  vcfSubsetByGene.c  vcfSummary.c
templates/: documentation.html  gene.html  genotype.html  index.html  info.html  raw.html  upload.html
web/: Makefile.am  Makefile.in  count.json  documentation.html  genotype.php  genotype_api.php  info.php  info_api.php  process.php  process_api.php  process_cli.php  process_data.php  summary.php  summary_api.php  test_summary_api.php  upload.php  vat.php  vat_genotype.php  vat_info.php  vat_process.php  vat_process_api.php  vat_summary.php  vat_upload.php
web/css/: style.css
web/lib/: cfio.php  config.php  constants.php  init.php  interval.php  intervalfind.php  rest.php  s3.php  util.php  vat.php  vatutil.php  vcf.php
web/lib/aws/: config.inc.php
web/templates/: sets.html  upload.html
web/tests/: test_cfio.php  test_interval.php  test_intervalfind.php
